# OS_CW

./: README.md
doc/: 212_Kutsenko_CW.docx
src/: CMakeLists.txt  config.ini  job.cpp  main.cpp
